fix: fix the cause of horizontal scrollbar

--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -6,8 +6,6 @@
 .reviews__content {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  max-width: 1319px;
   min-height: 895px;
   margin-left: 74.5px;
   background-image: url($bg-reviews-xl);
@@ -26,7 +24,6 @@
   flex-flow: column wrap;
   gap: 60px;
   align-content: flex-start;
-  width: 100%;
   max-height: 698px;
   margin-top: 77px;
   margin-left: 60px;
